--- a/counter-app/package.json
+++ b/counter-app/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://gandolh.github.io/React-ideas/counter-app",
   "name": "counter-app",
   "version": "0.1.0",
   "private": true,
@@ -14,12 +13,11 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    
   },
   "eslintConfig": {
     "extends": [
