--- a/personal-blog/package.json
+++ b/personal-blog/package.json
@@ -16,6 +16,8 @@
     "react-parallax-tilt": "^1.5.41",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
