--- a/personal-blog/package.json
+++ b/personal-blog/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^6.7.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
